# mcp-server

./: .coverage  README.md  coverage.xml  manual_mcp_server_test.py  pyproject.toml
.github/workflows/: ci.yml
src/devrev_mcp/: __init__.py  server.py  utils.py
tests/integration/: test_mcp_server_protocol.py  test_server_integration.py
tests/unit/: test_server.py  test_server_add_timeline_entry.py  test_server_create_part.py  test_server_create_work.py  test_server_error_branches.py  test_server_error_responses.py  test_server_get_current_user_mock.py  test_server_get_part.py  test_server_get_sprints_and_subtypes.py  test_server_get_sprints_state_default.py  test_server_get_work.py  test_server_list_meetings.py  test_server_list_meetings_and_stage_transition.py  test_server_list_meetings_payload.py  test_server_list_parts.py  test_server_list_works.py  test_server_main_entry.py  test_server_payload_branches.py  test_server_update_part.py  test_server_update_part_payload.py  test_server_update_stage_subtype.py  test_server_update_work.py  test_server_update_work_payload.py  test_server_valid_stage_transition.py  test_utils.py
